Fixed list overflowing screen

--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -68,7 +68,7 @@
 
 mat-list {
     padding: 0px;
-    height: 100%;
+    height: calc(100% - 56px);
 }
 
 .half-button {
